@@ -49,7 +49,13 @@ class JavaConfigurationCachePerformanceTest extends AbstractCrossVersionPerforma
     def "assemble #action configuration cache state with #daemon daemon"() {
         given:
         runner.tasksToRun = ["assemble"]
-        runner.args = ["-D${ConfigurationCacheOption.PROPERTY_NAME}=true"]
+        // use the deprecated property so it works with previous versions
+        runner.args = ["-D${ConfigurationCacheOption.DEPRECATED_PROPERTY_NAME}=true"]
+
+        // Workaround to make that test work on Java 17
+        // Unable to make field private final java.lang.Object[] java.lang.invoke.SerializedLambda.capturedArgs accessible
+        // module java.base does not "opens java.lang.invoke" to unnamed module
+        runner.gradleOpts += ["--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"]
 
         and:
         runner.useDaemon = daemon == hot
